--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://gifer.com/embed/7Fb7" width=480 height=360.000 frameBorder="0" allowFullScreen></iframe><p><a href="https://gifer.com">via GIFER</a></p>
+<img src="https://gifer.com/embed/7Fb7" width="90%">
